Bug 1207864 - Fix nsWebBrowserPersist's onStateChange callback in error cases. r=billm, a=lizzard